Fix alignment of nav bar - it was overlapping the version string

--- a/static/css/doc.css
+++ b/static/css/doc.css
@@ -316,7 +316,7 @@ ol {
 
 div.fw_nav {
 	position: fixed;
-	top: 25px;
+	top: 60px;
 	right: 30px;
 	width: 250px;
 	border: 1px solid #A4B5D5;
@@ -355,6 +355,10 @@ div.fw_nav li {
 
 div.fw_nav li>a {
 	font-weight: bold;
+}
+
+div.collapse_details {
+	clear: both;
 }
 
 
